--- a/backend/templates/layout.html
+++ b/backend/templates/layout.html
@@ -13,17 +13,21 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.16.0/moment-with-locales.min.js"></script>
 
-    <link rel="stylesheet" href="../static/style.css" />
-    <link rel="stylesheet" href="../static/chat.css" />
     <script
       src="https://code.jquery.com/jquery-3.5.1.min.js"
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
       crossorigin="anonymous"
     ></script>
 
-    <title>Private Chat</title>
+    <title>Stoop</title>
   </head>
   <body>
+    {% include "components/nav.html" %}
+    {% with messages=get_flashed_messages(with_categories=true) %} {% for
+      category, message in messages %}
+      <div class="alert alert-{{ category }} flashMessage">{{ message }}</div>
+      {% endfor %} {% endwith %}
+
     {% block content %} {% endblock %}
     </div>
   </body>
