--- a/backend/templates/layout.html
+++ b/backend/templates/layout.html
@@ -11,6 +11,10 @@
       crossorigin="anonymous"
     />
 
+    <link rel="stylesheet" type="text/css" href="/static/stoop.css"/>
+
+
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.16.0/moment-with-locales.min.js"></script>
 
     <script
