--- a/backend/templates/login.html
+++ b/backend/templates/login.html
@@ -1,35 +1,37 @@
 {% extends "layout.html" %} {% block content %}
 
-<div class="container p-3 my-3 bg-dark text-white text-center">
-  <form
-    name="login"
-    action=""
-    method="POST"
-    novalidate
-    class="form row was-validated"
-  >
-    <fieldset class="container">
-      <legend>Login</legend>
-      {{ loginForm.hidden_tag() }}
-      <p>
-        {{ loginForm.email.label }}<br />
-        {{ loginForm.email() }} <br />
-        {% for error in loginForm.email.errors %}
-        <div class="alert alert-danger btn-sm" role="alert">{{ error }}</div>
-        {% endfor %}
-      </p>
-      <p>
-        {{ loginForm.password.label }}<br />
-        {{ loginForm.password() }} <br />
-        {% for error in loginForm.password.errors %}
-        <span class="alert alert-danger btn-sm" role="alert">{{ error }}</span>
-        {% endfor %}
-      </p>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <img
+        src="https://cdn.buttercms.com/iw5pPEcQQW0fzXnbAeWw?fbclid=IwAR1yuKgRe9nACRBbzgfPAtdsTwAI2QXpYjPphWMHwjw0Z9i1Y2uZnq69Ygo">
+    </div>
+    <div class="col">
+      <div class="container p-3 my-3 text-center" style="background-color: #ebd2c4">
+        <form name="login" action="" method="POST" novalidate class="form row was-validated">
+          <fieldset class="container">
+            <legend>Login</legend>
+            {{ loginForm.hidden_tag() }}
+            <p>
+              {{ loginForm.email() }} <br />
+              {% for error in loginForm.email.errors %}
+            <div class="alert alert-danger btn-sm" role="alert">{{ error }}</div>
+            {% endfor %}
+            </p>
+            <p>
+              {{ loginForm.password() }} <br />
+              {% for error in loginForm.password.errors %}
+              <span class="alert alert-danger btn-sm" role="alert">{{ error }}</span>
+              {% endfor %}
+            </p>
 
-      <p>{{ loginForm.submit() }}</p>
-    </fieldset>
-  </form>
-  Don't have an account? <a href="{{url_for('signup')}}">Register</a>
+            <p>{{ loginForm.submit() }}</p>
+          </fieldset>
+        </form>
+        Don't have an account? <a href="{{url_for('signup')}}">Register</a>
+      </div>
+    </div>
+  </div>
 </div>
 
 {% endblock %}
