--- a/backend/templates/signup.html
+++ b/backend/templates/signup.html
@@ -1,52 +1,57 @@
 {% extends "layout.html" %} {% block content %}
-<div class="container p-3 my-3 bg-dark text-white text-center">
-  <form name="login" action="" method="POST" novalidate class="form">
-    <fieldset>
-      <legend>Signup</legend>
-      {{ signupForm.hidden_tag() }}
-      <p>
-        {{ signupForm.email.label }}<br />
-        {{ signupForm.email() }}<br />
-        {% for error in signupForm.email.errors %}
-        <span class="alert alert-danger btn-sm" role="alert">{{ error }}</span>
-        {% endfor %}
-      </p>
-      <p>
-        {{ signupForm.password.label }}<br />
-        {{ signupForm.password() }}<br />
-        {% for error in signupForm.password.errors %}
-        <span class="alert alert-danger btn-sm" role="alert">{{ error }}</span>
-        {% endfor %}
-      </p>
 
-      <p>
-        {{ signupForm.passwordConfirm.label }}<br />
-        {{ signupForm.passwordConfirm() }} <br />
-        {% for error in signupForm.passwordConfirm.errors %}
-        <span class="alert alert-danger btn-sm" role="alert">{{ error }}</span>
-        {% endfor %}
-      </p>
 
-      <p>
-        {{ signupForm.firstName.label }}<br />
-        {{ signupForm.firstName() }} <br />
-        {% for error in signupForm.firstName.errors %}
-        <span class="alert alert-danger btn-sm" role="alert">{{ error }}</span>
-        {% endfor %}
-      </p>
+<div class="container p-3 my-3 text-center registerBackground">
+  <div class="row">
+    <div class="col">
+      <img src="https://i.imgur.com/6zKXDxX.png">
+    </div>
+    <div class="col">
+      <form name="login" action="" method="POST" novalidate class="form">
+        <fieldset>
+          <legend>Sign Up</legend>
+          {{ signupForm.hidden_tag() }}
 
-      <p>
-        {{ signupForm.lastName.label }}<br />
-        {{ signupForm.lastName() }} <br />
-        {% for error in signupForm.lastName.errors %}
-        <span class="alert alert-danger btn-sm" role="alert">{{ error }}</span>
-        {% endfor %}
-      </p>
+          <p>
+            {{ signupForm.firstName() }} <br />
+            {% for error in signupForm.firstName.errors %}
+            <span class="alert alert-danger btn-sm" role="alert">{{ error }}</span>
+            {% endfor %}
+          </p>
 
-      <p>{{ signupForm.submit() }}</p>
-    </fieldset>
-  </form>
-  Already have an account? <a href="{{url_for('login')}}">Login</a>
+          <p>
+            {{ signupForm.lastName() }} <br />
+            {% for error in signupForm.lastName.errors %}
+            <span class="alert alert-danger btn-sm" role="alert">{{ error }}</span>
+            {% endfor %}
+          </p>
+
+          <p>
+            {{ signupForm.email() }}<br />
+            {% for error in signupForm.email.errors %}
+            <span class="alert alert-danger btn-sm" role="alert">{{ error }}</span>
+            {% endfor %}
+          </p>
+          <p>
+            {{ signupForm.password() }}<br />
+            {% for error in signupForm.password.errors %}
+            <span class="alert alert-danger btn-sm" role="alert">{{ error }}</span>
+            {% endfor %}
+          </p>
+
+          <p>
+            {{ signupForm.passwordConfirm() }} <br />
+            {% for error in signupForm.passwordConfirm.errors %}
+            <span class="alert alert-danger btn-sm" role="alert">{{ error }}</span>
+            {% endfor %}
+          </p>
+
+          <p>{{ signupForm.submit() }}</p>
+        </fieldset>
+      </form>
+      Already have an account? <a href="{{url_for('login')}}">Login</a>
+    </div>
+  </div>
 </div>
 
 {% endblock %}
