--- a/backend/templates/components/nav.html
+++ b/backend/templates/components/nav.html
@@ -2,7 +2,7 @@
   <nav class="navbar navbar-light">
     <ul class=" nav">
       <li class="nav-item">
-        <img src="https://i.imgur.com/H2ChDv8.png" width=50 height=50 />
+        <img src="https://i.ibb.co/1KR7qWd/H2ChDv8.png" width=50 height=50 />
       </li>
       </li>
       <a href="{{ url_for('home') }}" class="nav-link {% if index %}active{% endif %}">Home</a>
