--- a/backend/templates/login.html
+++ b/backend/templates/login.html
@@ -1,10 +1,9 @@
 {% extends "layout.html" %} {% block content %}
 
-<div class="container">
+<div class="container p-3 my-3 text-center registerBackground">
   <div class="row">
     <div class="col">
-      <img
-        src="https://cdn.buttercms.com/iw5pPEcQQW0fzXnbAeWw?fbclid=IwAR1yuKgRe9nACRBbzgfPAtdsTwAI2QXpYjPphWMHwjw0Z9i1Y2uZnq69Ygo">
+      <img class="imgLogin" src="https://cdn.buttercms.com/iw5pPEcQQW0fzXnbAeWw">
     </div>
     <div class="col">
       <div class="container p-3 my-3 text-center" style="background-color: #ebd2c4">
