--- a/backend/templates/signup.html
+++ b/backend/templates/signup.html
@@ -4,7 +4,7 @@
 <div class="container p-3 my-3 text-center registerBackground">
   <div class="row">
     <div class="col">
-      <img src="https://i.imgur.com/6zKXDxX.png">
+      <img src="https://i.ibb.co/1KR7qWd/H2ChDv8.png">
     </div>
     <div class="col">
       <form name="login" action="" method="POST" novalidate class="form">
