--- a/backend/static/stoop.css
+++ b/backend/static/stoop.css
@@ -48,7 +48,6 @@ input {
 }
 
 .card-container {
-  /* padding: 0 5px; */
   margin-top: 2em;
   text-align: center;
 }
@@ -56,25 +55,41 @@ input {
 .card {
   width: max(33%, 300px) !important;
   /* width: 300px; */
-  text-align: left;
+  /* text-align: left; */
   white-space: pre-wrap;
+
   /* display: flex;
   flex-direction: row; */
   /* justify-content: center; */
   margin: 0 10px;
-  /* @media screen and (max-width: 768px) {
-    flex-direction: column;
-    align-items: center;
-  } */
+  border-radius: 10px;
+  border: 2px solid #e4c3b0;
+
+}
+
+.card-footer{
+  text-align: center !important;
+  margin-bottom: -40px;
+  margin-top: -10px;
+}
+.card:hover{
+  background-color: #f0f0f0;
 }
 
 .card-text {
   margin: -20px 0;
   padding: 0;
+  border-radius: 7px;
+  border: 1px solid black;
+  padding: 2px 2px 2px 2px;
 }
 
 .card-title{
   margin: -30px 0;
+}
+
+.innerCard{
+  align-text: bottom;
 }
 
 .category, .date, .miles{
@@ -82,3 +97,31 @@ input {
   font-size: 13px;
 }
 
+.requestField {
+  display: block;
+  padding-left: 10px;
+  padding-right: 2px;
+  padding-bottom: 10px;
+  border: 2px solid #e4c3b0;
+  border-radius: 5px;
+}
+.requestForm{
+  background-color: #ebd2c4;
+  margin-left: 35vw;
+  margin-top: 10vh;
+
+  width: 30vw;
+  display:flex;
+  flex-direction: column;
+    align-items: center;
+  padding-right:10px;
+  padding-top: 10px;
+  justify-content: center;
+  border: 2px solid #e4c3b0;
+  border-radius: 5px;
+}
+
+.imgLogin{
+  width: 32vw;
+  height: 80vh;
+}
